--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,12 +6,7 @@
 
     <title>Global Day of Coderetreat</title>
     <link rel="icon" type="image/png" href="/images/gdcr-favicon.ico">
-    <link rel="stylesheet" href="/stylesheets/print.css" type="text/css" media="print">
-    <link rel="stylesheet" href="/stylesheets/main.css" type="text/css" media="screen">
-    <link rel="stylesheet" href="/stylesheets/layout.css" type="text/css" media="screen">
-    <link rel="stylesheet" href="/stylesheets/type.css" type="text/css" media="screen">
-    <link rel="stylesheet" href="/stylesheets/global_day.css" type="text/css" media="screen">
-    <link rel="stylesheet" href="/fonts/stylesheet.css" type="text/css" media="screen">
+    <link rel="stylesheet" href="/style.css" type="text/css"/>
 
     <style type="text/css"></style><script type="text/javascript" async="" src="http://www.google-analytics.com/ga.js"></script></head>
     <body class="global_day">
