--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,49 +1,23 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <meta name="description" content="The Global Day of Coderetreat as a day when developers all over the world will be practicing the fundamentals of software development.">
+    <meta name="description" content="The Global Day of Coderetreat is a day
+    when developers all over the world will be practicing the fundamentals
+    of software development.">
 
     <title>Global Day of Coderetreat</title>
     <link rel="icon" type="image/png" href="/images/gdcr-favicon.ico">
     <link rel="stylesheet" href="/style.css" type="text/css"/>
 
-    <style type="text/css"></style><script type="text/javascript" async="" src="http://www.google-analytics.com/ga.js"></script></head>
-    <body class="global_day">
-      <div class="container">
-        <div id="header">
-          <a id="logo" href="/"><img src="/images/gdcr-world.png" alt="logo"></a>
-          <h1><a href="/">Global Day of Coderetreat - honing the craft together...all over the world</a></h1>
-          <div class="call-to-action">
-            <a href="http://coderetreat.org/events/event/listByType?type=gdcr14" target="_blank" >View all local events &gt;</a>
-          </div>
-        </div><!--/header-->
-        <div id="main">
-          <div id="content">
-            <%= yield %>
-          </div><!--/content-->
-        </div><!--/main-->
-        <div id="sponsor-sidebar">
-          <header>
-            <h2>Global Sponsors</h2>
-          </header>
-          <section class="sponsors">
-            <header><a href="sponsors.html">Become a sponsor</a> and reach more than <strong>3,000</strong> of the world's most passionate developers.</header>
-            <section class="sponsor galaxy">
-            </section>
-            <section class='sponsor globe'>
-            </section>
-            <section class='sponsor continent'>
-            </section>
-          </section>
-          </section></div><!--/sponsor-sidebar-->
-      </div><!--/container-->
-      <div id="footer">
-        <div class="container-wide">
-        </div><!--/container-->
-      </div><!--/footer-->
-      <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
-      <script type="text/javascript" src="/javascripts/application.js"></script>
-      <script type="text/javascript" src="/javascripts/analytics.js"></script>
-    </body>
+    <script type="text/javascript" src="http://www.google-analytics.com/ga.js"></script>
+  </head>
+  <body>
+    <div class="content">
+      <%= yield %>
+    </div>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
+    <script type="text/javascript" src="/javascripts/application.js"></script>
+    <script type="text/javascript" src="/javascripts/analytics.js"></script>
+  </body>
 </html>
