--- a/views/index.erb
+++ b/views/index.erb
@@ -1,19 +1,65 @@
-<h1>Welcome to the Global Day of Coderetreat! November 15th, 2014</h1>
-
-<h2>What is it?</h2>
-<p>Global Day of Coderetreat is a world-wide event celebrating passion and software craftsmanship. <strong>Last year, over 5000 passionate software developers in 170 cities around the world</strong> registered to spend the day practicing the craft of software development using the <a href="http://coderetreat.org/">coderetreat format</a>. You can find out more information about the day on <a href="http://coderetreat.org/profiles/blogs/announcing-global-day-of-coderetreat-2014">the 2014 global day announcement</a>.</p>
-
-<h2>Where is it?</h2>
-<p>Last year, we had <a href="http://bit.ly/gdcr13map" target="_blank">170 cities around the world</a> participate in the Global Day of Coderetreat. This year we expect even more! We are currently in the process of registering cities. If you are interested in hosting or facilitating an event in your city, please fill in the <a href="http://bit.ly/gdcr14_leader_reg">host and facilitator registration form</a>. As we register events, you can find out if there is one in your city on the official <a href="http://coderetreat.org/events/event/listByType?type=gdcr14">GDCR 2014 event list page</a>.</p>
-<p>We already have more than <strong>40</strong> registered events!</p>
-
-<div class="center" id="city_map">
-  <iframe width="640" height="480" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/ms?hl=en&amp;msid=205250297592689175004.0004fff253b59fc106461&amp;msa=0&amp;ie=UTF8&amp;t=h&amp;ll=23.241346,19.6875&amp;spn=166.90393,89.296875&amp;z=1&amp;output=embed"></iframe><br /><small>View <a href="https://www.google.com/maps/ms?hl=en&amp;msid=205250297592689175004.0004fff253b59fc106461&amp;msa=0&amp;ie=UTF8&amp;t=h&amp;ll=23.241346,19.6875&amp;spn=166.90393,89.296875&amp;z=1&amp;source=embed" style="color:#0000FF;text-align:left">Global Day of Coderetreat 2014</a> in a larger map</small>
+<section id="benfits">
+<h2>Work through problems designed to improve the quality of your code</h2>
+<div class="benefit">
+  <span class="description">
+    Write programs that can easily adapt to changing requirements
+  </span>
 </div>
+<div class="benefit">
+  <span class="description">
+    Get rid of nasty complicated logic flow statements
+  </span>
+</div>
+<div class="benefit">
+  <span class="description">
+    Create tests that help your workflow, instead of getting in the way.
+  </span>
+</div>
+</section>
 
-<h2>Can I host or facilitate a coderetreat?</h2>
-<p>Yes you can! To get started, fill in the <a href="http://bit.ly/gdcr14_leader_reg">host and facilitator registration form</a> and we will give you access to leaders-only mailing lists and other resources to help you plan your coderetreat.</p>
-<p>Do you have questions about hosting a coderetreat, or are you unsure if you want to host? Feel free to check out our <a href="hosts/faq.html">Hosting FAQ</a>.</p>
+<section class="format">
+  <h2>It's Really Quite Simple...</h2>
+  <div class="step">
+    <span class="description">
+      Start with a simple programming problem – Conway's Game of Life.
+    </span>
+  </div>
+  <div class="step">
+    <span class="description">
+      Work with different partners to discuss and solve the problem.
+    </span>
+  </div>
+  <div class="step">
+    <span class="description">
+      We'll add restrictions to force you to consider different approaches.
+    </span>
+  </div>
+  <div class="step">
+    <span class="description">
+      After each round, throw out your code and repeat!
+    </span>
+  </div>
+</section>
 
-<h2>Who is organizing this?</h2>
-<p>GDCR 2014 will be brought to you by hundreds of passionate local hosts and facilitators worldwide and a team of global coordinators, including <a href="https://twitter.com/jthurne" target="_blank">Jim Hurne</a>, <a href="https://twitter.com/adibolb" target="_blank">Adi Bolboaca</a>, <a href="https://twitter.com/martinklose" target="_blank">Martin Klose</a>, and <a href="https://twitter.com/ElenaYankova1" target="_blank">Elena Yankova</a>.</p>
+<section class="organizers">
+  <h2>Behind the Scenes</h2>
+  <p>
+  Our team of passionate global organizers is dedicated to
+  improving developer happiness and productivity across the globe.
+
+  With the help of hundreds of hosts and facilitators worldwide,
+  they've been running code retreats for TODO years.
+  </p>
+  <div class="organizer">
+    <a href="https://twitter.com/jthurne" target="_blank">Jim Hurne</a>
+  </div>
+  <div class="organizer">
+    <a href="https://twitter.com/adibolb" target="_blank">Adi Bolboaca</a>
+  </div>
+  <div class="organizer">
+    <a href="https://twitter.com/martinklose" target="_blank">Martin Klose</a>
+  </div>
+  <div class="organizer">
+    <a href="https://twitter.com/ElenaYankova1" target="_blank">Elena Yankova</a>
+  </div>
+</section>
