Add a simple Google map on its own page

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -16,8 +16,12 @@
     <div class="content">
       <%= yield %>
     </div>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
+
     <script type="text/javascript" src="/javascripts/application.js"></script>
     <script type="text/javascript" src="/javascripts/analytics.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js">
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
+    <script type="text/javascript" src="/loadmap.js"></script>
   </body>
 </html>
