Add the mountain background for the header

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,13 @@
+<div id="hero">
+  <div class="header">
+    <h1>Global Day of Coderetreat</h1>
+    <h2>November 15, 2014</h2>
+
+    <p>Join us and thousands worldwide for a day
+    to celebrate passion and software craftsmanship.</p>
+  </div>
+</div>
+
 <section id="benfits">
 <h2>Work through problems designed to improve the quality of your code</h2>
 <div class="benefit">
